--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -45,7 +45,7 @@ $hover-dark-gray: #413c38 !default;
     padding-left: 0;
 
     .navbar-brand {
-      margin: 0;
+      margin: 0 12px 0 0;
     }
   }
 
