--- a/liquid/_includes/components/navbar.html
+++ b/liquid/_includes/components/navbar.html
@@ -91,8 +91,8 @@
         </div>
         <nav class="collapse navbar-collapse" role="navigation">
           <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control form-search" placeholder="Search">
+            <div class="form-group form-search">
+              <input type="text" class="form-control input-sm" placeholder="Search">
             </div>
           </form>
         </nav>
@@ -113,7 +113,7 @@
     <nav class="collapse navbar-collapse" role="navigation">
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
-          <input type="text" class="form-control form-search" placeholder="Search">
+          <input type="text" class="form-control form-search input-sm" placeholder="Search">
         </div>
       </form>
     </nav>
