[#76253826] udpate search input in navbar

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -119,6 +119,11 @@ $hover-dark-gray: #413c38 !default;
   }
 }
 
+.navbar-form {
+  @include navbar-vertical-align($input-height-small);
+}
+
+
 //
 // Customer
 // --------------------------------------------------
