--- a/liquid/_includes/components/navbar.html
+++ b/liquid/_includes/components/navbar.html
@@ -112,7 +112,7 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
+        <div class="form-group form-search">
           <input type="text" class="form-control form-search input-sm" placeholder="Search">
         </div>
       </form>
