[#76253826] fix style conflict

--- a/liquid/_includes/components/badges.html
+++ b/liquid/_includes/components/badges.html
@@ -4,7 +4,7 @@
 
   <div class="bs-example">
     <div class="row">
-      <ul class="nav nav-pills nav-stacked col-md-3">
+      <ul class="nav nav-pills nav-stacked ge-nav-stacked col-md-3">
         <li>
           <a href="#">
             <span class="badge pull-right">31</span>
@@ -24,7 +24,7 @@
           </a>
         </li>
       </ul>
-      <ul class="nav nav-pills nav-stacked ge-dark col-md-3" style="background-color: #f4f4f4;">
+      <ul class="nav nav-pills nav-stacked ge-nav-stacked ge-dark col-md-3" style="background-color: #f4f4f4;">
         <li>
           <a href="#">
             <span class="badge pull-right">31</span>
@@ -48,7 +48,7 @@
   </div>
   <br>
 {% highlight html %}
-<ul class="nav nav-pills nav-stacked">
+<ul class="nav nav-pills nav-stacked ge-nav-stacked">
   <li>
     <a href="#">
       <span class="badge pull-right">31</span>
@@ -59,7 +59,7 @@
 </ul>
 
 <!-- With dark backgorund -->
-<ul class="nav nav-pills nav-stacked ge-dark">
+<ul class="nav nav-pills nav-stacked ge-nav-stacked ge-dark">
   <li>
     <a href="#">
       <span class="badge pull-right">31</span>
