--- a/liquid/_includes/components/navbar.html
+++ b/liquid/_includes/components/navbar.html
@@ -16,6 +16,7 @@
           <a class="navbar-brand" href="#"></a>
         </div>
         <nav class="collapse navbar-collapse" role="navigation">
+          <!-- Left nav -->
           <ul class="nav navbar-nav">
             <li>
               <a href="#">Orders</a>
@@ -31,6 +32,15 @@
             </li>
             <li>
               <a href="#">Support</a>
+            </li>
+          </ul>
+          <!-- Right nav -->
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="#"><i class="icon-create"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="icon-settings"></i></a>
             </li>
           </ul>
         </nav>
