[#76253826] refactoring navbar & dromdown CSS

--- a/liquid/_includes/components/navbar.html
+++ b/liquid/_includes/components/navbar.html
@@ -46,6 +46,7 @@
         </nav>
       </div>
     </header>
+  </div>
 {% highlight html %}
 <header class="navbar navbar-static-top" role="banner">
   <div class="container-fluid">
@@ -81,8 +82,6 @@
 </header>
 {% endhighlight %}
 
-  </div>
-
   <p>Add <code>.navbar-fixed-top</code> and include a <code>.container</code> or <code>.container-fluid</code> to center and pad navbar content. Create a full-width navbar that scrolls away with the page by adding .navbar-static-top and include a .container or <code>.container-fluid</code> to center and pad navbar content.</p>
   <p>Unlike the <code>.navbar-fixed-*</code> classes, you do not need to change any padding on the body.</p>
 
@@ -108,6 +107,7 @@
         </nav>
       </div>
     </header>
+  </div>
 {% highlight html %}
 <header class="navbar navbar-static-top" role="banner">
   <div class="container-fluid">
@@ -130,7 +130,6 @@
   </div>
 </header>
 {% endhighlight %}
-  </div>
 
   <h2>Buttons</h2>
   <div class="navbar-styles">
@@ -147,11 +146,12 @@
         </div>
         <nav class="collapse navbar-collapse" role="navigation">
           <div class="navbar-right">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary navbar-btn">Submit</button>
           </div>
         </nav>
       </div>
     </header>
+  </div>
 {% highlight html %}
 <header class="navbar navbar-static-top" role="banner">
   <div class="container-fluid">
@@ -166,13 +166,13 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <div class="navbar-right">
-        <button class="btn btn-primary">Submit</button>
+        <button class="btn btn-primary navbar-btn">Submit</button>
       </div>
     </nav>
   </div>
 </header>
 {% endhighlight %}
-  </div>
+
   <h2>Text</h2>
   <div class="navbar-styles">
     <header class="navbar navbar-static-top" role="banner">
@@ -188,11 +188,12 @@
         </div>
         <nav class="collapse navbar-collapse" role="navigation">
           <div class="navbar-right">
-            <p class="navbar-text">Logged in as User-123</p>
+            <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link">User-123</a></p>
           </div>
         </nav>
       </div>
     </header>
+  </div>
 {% highlight html %}
 <header class="navbar navbar-static-top" role="banner">
   <div class="container-fluid">
@@ -207,12 +208,11 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <div class="navbar-right">
-        <p class="navbar-text">Logged in as User-123</p>
+        <p class="navbar-text navbar-right">Signed in as <a href="#" class="navbar-link">User-123</a></p>
       </div>
     </nav>
   </div>
 </header>
 {% endhighlight %}
-  </div>
 
 </div>
