--- a/scss/_dropdowns.scss
+++ b/scss/_dropdowns.scss
@@ -18,6 +18,10 @@
   box-shadow: 0 1px 6px 1px rgba(0, 0, 0, .2);
 }
 
+.dropdown-header {
+  font-size: $dropdown-header-font-size;
+}
+
 .multiselect-container {
   &.dropdown-menu {
     min-width: 240px;
