--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -465,8 +465,8 @@ $navbar-inverse-toggle-border-color:        #333 !default;
 $nav-link-padding:                          6px 16px !default;
 $nav-link-hover-bg:                         $gray-lighter !default;
 
-$nav-disabled-link-color:                   $gray-light !default;
-$nav-disabled-link-hover-color:             $gray-light !default;
+$nav-disabled-link-color:                   $gengo-gray-light !default;
+$nav-disabled-link-hover-color:             $gengo-gray-light !default;
 
 $nav-open-link-hover-color:                 #fff !default;
 
