[#76253826] udpate button group CSS & HTML sample

--- a/liquid/_includes/components/buttons-groups.html
+++ b/liquid/_includes/components/buttons-groups.html
@@ -21,22 +21,22 @@
   <h2>Button toolbar</h2>
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group">
-      <button type="button" class="btn btn-default">&lt;</button>
+      <button type="button" class="btn btn-default"><i class="icon-previous"></i></button>
       <button type="button" class="btn btn-default">1</button>
       <button type="button" class="btn btn-default">2</button>
       <button type="button" class="btn btn-default">3</button>
-      <button type="button" class="btn btn-default">&gt;</button>
+      <button type="button" class="btn btn-default"><i class="icon-next"></i></button>
     </div>
   </div>
   <br>
 {% highlight html %}
 <div class="btn-toolbar" role="toolbar">
   <div class="btn-group">
-    <button type="button" class="btn btn-default">&lt;</button>
+    <button type="button" class="btn btn-default"><i class="icon-previous"></i></button>
     <button type="button" class="btn btn-default">1</button>
     <button type="button" class="btn btn-default">2</button>
     <button type="button" class="btn btn-default">3</button>
-    <button type="button" class="btn btn-default">&gt;</button>
+    <button type="button" class="btn btn-default"><i class="icon-next"></i></button>
   </div>
 </div>
 {% endhighlight %}
