[#66300368] add voice content

--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -4,6 +4,10 @@
 @import "variables";
 
 
+body > .container {
+  margin-bottom: 60px;
+}
+
 .box {
   margin-bottom: 26px;
   padding-bottom: 21px;
