[#66300368] fix some table CSS

--- a/liquid/_includes/components/tables.html
+++ b/liquid/_includes/components/tables.html
@@ -2,7 +2,7 @@
   <h1 id="tables">Tables</h1>
   <hr/>
   <h2>Single line</h2>
-  <table class="table">
+  <table class="table table-dashboard">
     <thead>
       <tr>
         <th class="col-md-1 reward">REWARD</th>
@@ -45,7 +45,7 @@
   </table>
 {% highlight html %}
 <!-- Single line -->
-<table class="table">
+<table class="table table-dashboard">
   <thead>
     <tr>
       <th class="col-md-1 reward">REWARD</th>
@@ -68,7 +68,7 @@
 {% endhighlight %}
 
   <h2>Two line</h2>
-  <table class="table">
+  <table class="table table-dashboard">
     <thead>
       <tr>
         <th class="col-md-1 reward">REWARD</th>
@@ -111,7 +111,7 @@
   </table>
 {% highlight html %}
 <!-- Two line -->
-<table class="table">
+<table class="table table-dashboard">
   <thead>
     <tr>
       <th class="col-md-1 reward">REWARD</th>
@@ -133,7 +133,7 @@
 </table>
 {% endhighlight %}
   <h2>Compact</h2>
-  <table class="table table-condensed">
+  <table class="table table-dashboard table-condensed">
     <thead>
       <tr>
         <th class="col-md-1 reward">REWARD</th>
@@ -176,7 +176,7 @@
   </table>
 {% highlight html %}
 <!-- Compact -->
-<table class="table table-condensed">
+<table class="table table-dashboard table-condensed">
   <thead>
     <tr>
       <th class="col-md-1 reward">REWARD</th>
