[#76253826] update left navigation HTML

--- a/liquid/_includes/grid/sidebar-and-box.html
+++ b/liquid/_includes/grid/sidebar-and-box.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-xs-2">
       <p>ACTIVE TRANSLATIONS</p>
-      <ul class="nav">
-        <li><a>Logo</a></li>
+      <ul class="nav nav nav-pills nav-stacked ge-nav-stacked ge-dark">
+        <li class="active"><a>Logo</a></li>
         <li><a>Color</a></li>
         <li><a>Typography</a></li>
         <li><a>Icons</a></li>
