--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -49,7 +49,7 @@ js:
   <link rel="apple-touch-icon-precomposed" href="assets/images/apple-touch-icons/gengo_c_app.png">
   <link rel="icon" href="assets/favicons/gengo.ico" type="image/x-icon">
 </head>
-<body>
+<body data-spy="scroll" data-target=".ge-nav">
   <header class="navbar navbar-static-top ge-navbar" role="banner">
     <div class="container-fluid">
       <div class="navbar-header">
