[#76253826] udpate top page and some refactoring

--- a/liquid/_includes/index.html
+++ b/liquid/_includes/index.html
@@ -1,5 +1,34 @@
 <div class="container">
-  <h1>Gengo Style Guide</h1>
-  <hr/>
-  <p>Here is new world.</p>
+
+  <div class="col-xs-10">
+    <h1>Gengo Style Guide</h1>
+
+    <p>The <strong>Gengo Style Guide</strong> is at the heart of our drive to bring consistency to our product UI and efficiency to our development process.</p>
+    <p>Based on the <a href="http://getbootstrap.com/">Bootstrap framework</a>, it is a well-defined collection of components that can be used to assemble new UIs quickly without accruing new technical debt. It is also a place for anyone to understand the dos and don'ts of working with Gengo's brand.</p>
+
+    <h2>How it benefits us</h2>
+    <ul>
+      <li>We can present Gengo's brand and voice consistently across all channels</li>
+      <li>We can focus on workflows and logic, not buttons and list items</li>
+      <li>We can build consistently and quickly without needing design oversight for every pixel</li>
+      <li>We can maintain our UI code in one place and keep redundancy to a minimum</li>
+    </ul>
+    <p>Our style guide is a living reference tool for developers, designers, marketers and product managers. We share it here in the hope that it might help others on a similar path.</p>
+
+    <h2>Inspiration</h2>
+    <p>A big thanks to all the people and organizations that we've been heavily inspired by while creating this:</p>
+    <ul>
+      <li><a href="http://24ways.org/2011/front-end-style-guides/">Anna Debenham</a></li>
+      <li><a href="http://bradfrostweb.com/blog/post/atomic-web-design/">Brad Frost</a></li>
+      <li><a href="http://ux.mailchimp.com/patterns/">MailChimp </a></li>
+      <li><a href="https://github.com/styleguide/css">Github</a></li>
+      <li><a href="http://sfdc-styleguide.herokuapp.com/">Salesforce</a></li>
+      <li><a href="http://www.yelp.com/styleguide">Yelp</a></li>
+      <li><a href="http://www.starbucks.com/static/reference/styleguide/">Starbucks</a></li>
+      <li><a href="http://patterns.alistapart.com/">A List Apart</a></li>
+      <li><a href="https://www.gov.uk/design-principles">GOV.UK</a></li>
+      <li><a href="http://style.codeforamerica.org/">Code for America</a></li>
+    </ul>
+  </div>
+
 </div>
