[#76253826] udpate text on Sarah's feedback

--- a/liquid/_includes/components/buttons-dropdowns.html
+++ b/liquid/_includes/components/buttons-dropdowns.html
@@ -1,5 +1,5 @@
 <div class="box">
-  <h1 id="buttons-dropdowns">Buttons Dropdowns</h1>
+  <h1 id="buttons-dropdowns">Buttons dropdowns</h1>
   <hr/>
   <h2 id="btn-dropdowns-single">Single button dropdowns</h2>
     <div class="btn-group">
