--- a/liquid/_includes/components/buttons-groups.html
+++ b/liquid/_includes/components/buttons-groups.html
@@ -1,5 +1,5 @@
 <div class="box">
-  <h1 id="buttons-groups">Buttons Groups</h1>
+  <h1 id="buttons-groups">Buttons groups</h1>
   <hr/>
 
   <h2>Basic example</h2>
