--- a/liquid/_includes/components/helper-classes.html
+++ b/liquid/_includes/components/helper-classes.html
@@ -1,5 +1,6 @@
 <div class="box">
-  <h1 id="helper-classes">Helper Classes</h1>
+  <h1 id="helper-classes">Helper classes</h1>
+
   <h2>Close icon</h2>
   <div class="bs-example">
      <span class="icon-close" style="font-size:10px;color:#4d4843;"></span>
