--- a/liquid/_includes/components/supported-controls.html
+++ b/liquid/_includes/components/supported-controls.html
@@ -1,5 +1,5 @@
 <div class="box">
-  <h1 id="supported-controls">Supported Controls</h1>
+  <h1 id="supported-controls">Supported controls</h1>
   <hr/>
 
   <h2>Inputs</h2>
