--- a/liquid/_includes/grid/full-width-in-box.html
+++ b/liquid/_includes/grid/full-width-in-box.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="box">
-    <h1>Full Width In Box</h1>
+    <h1>Full width in box</h1>
     <div class="row ge-show-grid">
       <div class="col-xs-12"><p>1/1</p></div>
     </div>
