--- a/liquid/_includes/grid/full-width.html
+++ b/liquid/_includes/grid/full-width.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Full Width</h1>
+  <h1>Full width</h1>
   <div class="row ge-show-grid">
     <div class="col-xs-12"><p>1/1</p></div>
   </div>
