--- a/liquid/_includes/style/doctype-icons.html
+++ b/liquid/_includes/style/doctype-icons.html
@@ -1,5 +1,5 @@
 <div class="box doctype">
-  <h1 id="doctype-icons">Doctype Icons</h1>
+  <h1 id="doctype-icons">Doctype icons</h1>
   <!-- <hr/> -->
 
   <div class="row">
