--- a/liquid/_includes/style/typography.html
+++ b/liquid/_includes/style/typography.html
@@ -16,13 +16,13 @@
 {% endhighlight %}
 
   <h2>Default paragraph</h2>
-  <p>Gengo is using a sans-serif Google Font called Open Sans designed Steve Matteson. We have chosen this font because of it’s organic, friendly and neutral appearance and it’s high legibility throughout all digital devices. It was important for us to chose a Humanist typeface, since we are a company that offers human translation.</p>
+  <p>Gengo is using a sans-serif Google Font called Open Sans, designed by Steve Matteson. We have chosen this font because of its organic, friendly and neutral appearance and its high legibility across all digital devices. It was important for us to chose a humanist typeface because we are a company that offers human translation.</p>
 {% highlight html %}
   <p>...</p>
 {% endhighlight %}
 
   <h2>Small paragraph</h2>
-  <p class="small">Gengo is using a sans-serif Google Font called Open Sans designed Steve Matteson. We have chosen this font because of it’s organic, friendly and neutral appearance and it’s high legibility throughout all digital devices. It was important for us to chose a Humanist typeface, since we are a company that offers human translation.</p>
+  <p class="small">Gengo is using a sans-serif Google Font called Open Sans, designed by Steve Matteson. We have chosen this font because of its organic, friendly and neutral appearance and its high legibility across all digital devices. It was important for us to chose a humanist typeface because we are a company that offers human translation.</p>
 {% highlight html %}
   <p class="small">...</p>
 {% endhighlight %}
@@ -58,7 +58,7 @@
   <h2>Quotes</h2>
   <p>A paragraph of text that’s before the quote:</p>
   <blockquote>
-    <p>Gengo is using a sans-serif Google Font called Open Sans designed Steve Matteson. We have chosen this font because of it’s organic, friendly and neutral appearance and it’s high legibility throughout all digital devices. It was important for us to chose a Humanist typeface, since we are a company that offers human translation.</p>
+    <p>Gengo is using a sans-serif Google Font called Open Sans, designed by Steve Matteson. We have chosen this font because of its organic, friendly and neutral appearance and its high legibility across all digital devices. It was important for us to chose a humanist typeface because we are a company that offers human translation.</p>
   </blockquote>
 {% highlight html %}
 <blockquote>
