--- a/liquid/_includes/components/control-sizing.html
+++ b/liquid/_includes/components/control-sizing.html
@@ -1,6 +1,8 @@
 <div class="box">
-  <h1 id="control-sizing">Control Sizing</h1>
+  <h1 id="control-sizing">Control sizing</h1>
   <hr/>
+
+
   <h2>Height</h2>
   <div class="bs-example">
     <div class="form-group">
