--- a/liquid/_includes/components/progress-bar.html
+++ b/liquid/_includes/components/progress-bar.html
@@ -1,5 +1,5 @@
 <div class="box">
-  <h1 id="progress-bar">Progress Bar</h1>
+  <h1 id="progress-bar">Progress bar</h1>
   <hr/>
   <h2>Basic</h2>
   <div class="bs-example">
