--- a/liquid/_includes/components/validation-states.html
+++ b/liquid/_includes/components/validation-states.html
@@ -1,5 +1,5 @@
 <div class="box">
-  <h1 id="validation-states">Validation States</h1>
+  <h1 id="validation-states">Validation states</h1>
   <hr/>
 
   <div class="bs-example">
