--- a/liquid/_includes/grid/sidebar-and-box.html
+++ b/liquid/_includes/grid/sidebar-and-box.html
@@ -11,7 +11,7 @@
     </div>
     <div class="col-xs-10">
       <div class="box">
-        <h1>Sidebar &amp; Box</h1>
+        <h1>Sidebar and box</h1>
         <div class="row ge-show-grid">
           <div class="col-xs-12"><p>1/1</p></div>
         </div>
