--- a/liquid/_includes/style/logo-usage.html
+++ b/liquid/_includes/style/logo-usage.html
@@ -1,7 +1,7 @@
 <div class="box logo-usage">
-  <h1 id="logo-usage">Logo</h1>
+  <h1 id="logo-usage">Logo usage</h1>
   <hr/>
-  <p>The gengo logotype is custom designed to embody many of the aspirational qualities of the brand. Highly efficient, the letterforms are based on oval shapes and subtly contrasted stroke weight. The g and e blend into the background as the letters adapt to any environment they are placed.<br><br>As a rule, the logo should always be white against a solid color or can be used on top of a photograph depending on the image’s complexity and placement. The logo should have a generous amount of space on either side in order to breathe. Simplicity and white space is key.</p>
+  <p>The Gengo logotype is custom-designed to embody many of the aspirational qualities of the brand. Highly efficient, the letterforms are based on oval shapes and subtly contrasted stroke weight. The "g" and "e" blend into the background as the letters adapt to any environment they are placed in.</p>
 
   <h2>Preferred</h2>
   <div class="row">
@@ -63,13 +63,13 @@
       <div class="image-wrap gengo-blue">
         <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit" alt="">
       </div>
-      <p>Translator facing</p>
+      <p>Translator-facing</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <div class="image-wrap gengo-red">
         <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit" alt="">
       </div>
-      <p>Developer facing</p>
+      <p>Developer-facing</p>
     </div>
   </div>
 
